sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: not found: value j
      echange(i,j)
                ^AlgBubbleSort1:6: error: reassignment to val
      i = 0
        ^