sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i <- 1 to getNombreValeurs()){
    if (!plusPetit(i, i+1)){
      echange(i,j)
      i = 0
    }
  }
}